# rv64_emulator

./: Cargo.toml  Makefile
src/: instruction.rs  main.rs
src/riscv/: cpu.rs  instruction.rs  mod.rs
src/riscv/execute/: b.rs  i.rs  j.rs  mod.rs  r.rs  s.rs  u.rs
