[package]
name = "rv64_emulator"
version = "0.1.0"
authors = ["Sean D'Souza <sdammobubbles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }
